--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -38,13 +38,27 @@ logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
+# PayPal Configuration
 paypal:
-  mode: sandbox # or live
-  client-id: AaJznEpFe4e6d9IvlvAow5_hNb_LXF5Ux7ErjZuNlr4QRmyxMvxUlC6rBjxbUwOxAK5Ohpaodi7xY4dz
-  client-secret: EGtQvi4lftVEkMeDZP6Y-QiubFGstclyTGRTmE9zzxYNNKbCgF21ttfyC68C_-FNFsFpOgLuvzamuXWH
-  api-base: https://api-m.sandbox.paypal.com
-  return-url: http://localhost:8443/app/api/proxy/payments/paypal/success
-  cancel-url: http://localhost:8443/app/api/proxy/payments/paypal/cancel
+  mode: ${PAYPAL_MODE:sandbox}
+  client-id: ${PAYPAL_CLIENT_ID}
+  client-secret: ${PAYPAL_CLIENT_SECRET}
+  api-base: ${PAYPAL_API_BASE}
+  return-url: ${PAYPAL_RETURN_URL}
+  cancel-url: ${PAYPAL_CANCEL_URL}
 
+# VNPay Configuration
+vnpay:
+  tmn-code: ${VNPAY_TMN_CODE}
+  hash-secret: ${VNPAY_HASH_SECRET}
+  payment-url: ${VNPAY_PAYMENT_URL}
+  return-url: ${VNPAY_RETURN_URL}
+  version: ${VNPAY_VERSION}
+  command: ${VNPAY_COMMAND}
+  order-type: ${VNPAY_ORDER_TYPE}
+
+# Payment Frontend URLs
 payment:
-  frontend-result-url: http://localhost:3000/result
+  frontend-result-url: ${PAYMENT_FRONTEND_RESULT_URL}
+  frontend-vnpay-return-url: ${PAYMENT_FRONTEND_VNPAY_RETURN_URL}
+
