feat(UserService) : config kafka redis permission

--- a/proxy-client/pom.xml
+++ b/proxy-client/pom.xml
@@ -78,6 +78,18 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Redis for permission caching -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<!-- Kafka for cache invalidation -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
