--- a/proxy-client/src/main/resources/application.yml
+++ b/proxy-client/src/main/resources/application.yml
@@ -24,6 +24,20 @@ spring:
       cache:
         enabled: true
         ttl: 10s
+  # Redis Configuration for Permission Caching
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+    password: ${REDIS_PASSWORD:}
+    timeout: ${REDIS_TIMEOUT}ms
+    lettuce:
+      pool:
+        max-active: ${REDIS_POOL_MAX_ACTIVE}
+        max-idle: ${REDIS_POOL_MAX_IDLE}
+        min-idle: ${REDIS_POOL_MIN_IDLE}
+  # Kafka Configuration for Cache Invalidation (uses common-service KafkaConfig)
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 
 eureka:
   client:
