ai service (chatbot)

--- a/ai-service/src/main/resources/application.yml
+++ b/ai-service/src/main/resources/application.yml
@@ -62,6 +62,12 @@ qdrant:
   lesson-collection: ${QDRANT_LESSON_COLLECTION:lesson_embeddings}
   profile-collection: ${QDRANT_PROFILE_COLLECTION:user_embeddings}
 
+# AI Chat Session Configuration
+ai:
+  chat:
+    cleanup:
+      days-to-keep: ${AI_CHAT_CLEANUP_DAYS:30} # Auto-delete sessions older than 30 days
+
 logging:
   level:
     com.techhub.app.aiservice: DEBUG
