fix(payment): get course id

--- a/dev.env
+++ b/dev.env
@@ -35,3 +35,6 @@ PAYPAL_CANCEL_URL=http://localhost:8443/app/api/proxy/payments/paypal/cancel
 # Frontend URLs
 PAYMENT_FRONTEND_RESULT_URL=http://localhost:3000/result
 PAYMENT_FRONTEND_VNPAY_RETURN_URL=http://localhost:3000/vnpay-return
+
+# Course Service URL
+COURSE_SERVICE_URL=http://localhost:8082
