fix(Payment) : fix pom vs dev.env

--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>hibernate-types-52</artifactId>
             <version>2.16.3</version>
         </dependency>
+        	<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 
 	</dependencies>
 		<dependencyManagement>
