--- a/dev.env
+++ b/dev.env
@@ -1,7 +1,7 @@
 HOST_IP_ADDRESS=localhost
 REDIS_HOSTNAME=localhost
-KAFKA_HOSTNAME=localhost
-DB_HOSTNAME=localhost
+# KAFKA_HOSTNAME=localhost
+# DB_HOSTNAME=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
