--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -41,8 +41,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
+    username: ${NOTIFICATION_MAIL_USERNAME:}
+    password: ${NOTIFICATION_MAIL_PASSWORD:}
     properties:
       mail:
         smtp:
