--- a/portainer-stack.yml
+++ b/portainer-stack.yml
@@ -53,6 +53,14 @@ services:
       - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
       - EUREKA_SERVER_URL=${EUREKA_SERVER_URL}
       - EUREKA_INSTANCE_HOSTNAME=${EUREKA_INSTANCE_HOSTNAME_PROXY_CLIENT}
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_TIMEOUT=${REDIS_TIMEOUT}
+      - REDIS_POOL_MAX_ACTIVE=${REDIS_POOL_MAX_ACTIVE}
+      - REDIS_POOL_MAX_IDLE=${REDIS_POOL_MAX_IDLE}
+      - REDIS_POOL_MIN_IDLE=${REDIS_POOL_MIN_IDLE}
       - JWT_SECRET=${JWT_SECRET}
       - JWT_EXPIRATION=${JWT_EXPIRATION}
       - JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}
@@ -60,6 +68,8 @@ services:
       - do-an-net
     depends_on:
       api-gateway-container:
+        condition: service_healthy
+      service-discovery-container:
         condition: service_healthy
     restart: always
     healthcheck:
@@ -82,7 +92,6 @@ services:
       - EUREKA_INSTANCE_HOSTNAME=${EUREKA_INSTANCE_HOSTNAME_USER_SERVICE}
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - KAFKA_EMAIL_TOPIC=${KAFKA_EMAIL_TOPIC}
-      - KAFKA_CONSUMER_GROUP=user-service
       - KAFKA_AUTO_OFFSET_RESET=${KAFKA_AUTO_OFFSET_RESET}
       - KAFKA_CONSUMER_TRUSTED_PACKAGES=${KAFKA_CONSUMER_TRUSTED_PACKAGES}
       - KAFKA_CONSUMER_CONCURRENCY=${KAFKA_CONSUMER_CONCURRENCY}
@@ -91,10 +100,13 @@ services:
       - MAIL_PASSWORD=${USER_MAIL_PASSWORD}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI}
       - FACEBOOK_CLIENT_ID=${FACEBOOK_CLIENT_ID}
       - FACEBOOK_CLIENT_SECRET=${FACEBOOK_CLIENT_SECRET}
+      - FACEBOOK_REDIRECT_URI=${FACEBOOK_REDIRECT_URI}
       - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
       - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
+      - GITHUB_REDIRECT_URI=${GITHUB_REDIRECT_URI}
       - APP_OAUTH2_REDIRECT_URI=${APP_OAUTH2_REDIRECT_URI}
       - APP_EMAIL_ENABLED=${APP_EMAIL_ENABLED}
     networks:
@@ -123,11 +135,24 @@ services:
       - EUREKA_INSTANCE_HOSTNAME=${EUREKA_INSTANCE_HOSTNAME_BLOG_SERVICE}
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - KAFKA_EMAIL_TOPIC=${KAFKA_EMAIL_TOPIC}
-      - KAFKA_CONSUMER_GROUP=blog-service
       - KAFKA_AUTO_OFFSET_RESET=${KAFKA_AUTO_OFFSET_RESET}
       - KAFKA_CONSUMER_TRUSTED_PACKAGES=${KAFKA_CONSUMER_TRUSTED_PACKAGES}
       - KAFKA_CONSUMER_CONCURRENCY=${KAFKA_CONSUMER_CONCURRENCY}
       - KAFKA_CONSUMER_ACK_MODE=${KAFKA_CONSUMER_ACK_MODE}
+      - WEBSOCKET_ENDPOINT=${WEBSOCKET_ENDPOINT}
+      - WEBSOCKET_SOCKJS_ENABLED=${WEBSOCKET_SOCKJS_ENABLED}
+      - WEBSOCKET_ALLOWED_ORIGINS=${WEBSOCKET_ALLOWED_ORIGINS}
+      - WEBSOCKET_APP_PREFIX=${WEBSOCKET_APP_PREFIX}
+      - WEBSOCKET_BROKER_TOPIC_PREFIX=${WEBSOCKET_BROKER_TOPIC_PREFIX}
+      - WEBSOCKET_BROKER_QUEUE_PREFIX=${WEBSOCKET_BROKER_QUEUE_PREFIX}
+      - WEBSOCKET_USER_PREFIX=${WEBSOCKET_USER_PREFIX}
+      - WEBSOCKET_PRESERVE_ORDER=${WEBSOCKET_PRESERVE_ORDER}
+      - WEBSOCKET_RELAY_ENABLED=${WEBSOCKET_RELAY_ENABLED}
+      - WEBSOCKET_RELAY_HOST=${WEBSOCKET_RELAY_HOST}
+      - WEBSOCKET_RELAY_PORT=${WEBSOCKET_RELAY_PORT}
+      - WEBSOCKET_RELAY_LOGIN=${WEBSOCKET_RELAY_LOGIN}
+      - WEBSOCKET_RELAY_PASSCODE=${WEBSOCKET_RELAY_PASSCODE}
+      - WEBSOCKET_RELAY_VHOST=${WEBSOCKET_RELAY_VHOST}
     networks:
       - do-an-net
     depends_on:
@@ -156,6 +181,21 @@ services:
       - EUREKA_INSTANCE_HOSTNAME=${EUREKA_INSTANCE_HOSTNAME_COURSE_SERVICE}
       - SPRING_ZIPKIN_BASE_URL=${SPRING_ZIPKIN_BASE_URL}
       - HOST_IP_ADDRESS=${HOST_IP_ADDRESS}
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - WEBSOCKET_ENDPOINT=${WEBSOCKET_ENDPOINT}
+      - WEBSOCKET_SOCKJS_ENABLED=${WEBSOCKET_SOCKJS_ENABLED}
+      - WEBSOCKET_ALLOWED_ORIGINS=${WEBSOCKET_ALLOWED_ORIGINS}
+      - WEBSOCKET_APP_PREFIX=${WEBSOCKET_APP_PREFIX}
+      - WEBSOCKET_BROKER_TOPIC_PREFIX=${WEBSOCKET_BROKER_TOPIC_PREFIX}
+      - WEBSOCKET_BROKER_QUEUE_PREFIX=${WEBSOCKET_BROKER_QUEUE_PREFIX}
+      - WEBSOCKET_USER_PREFIX=${WEBSOCKET_USER_PREFIX}
+      - WEBSOCKET_PRESERVE_ORDER=${WEBSOCKET_PRESERVE_ORDER}
+      - WEBSOCKET_RELAY_ENABLED=${WEBSOCKET_RELAY_ENABLED}
+      - WEBSOCKET_RELAY_HOST=${WEBSOCKET_RELAY_HOST}
+      - WEBSOCKET_RELAY_PORT=${WEBSOCKET_RELAY_PORT}
+      - WEBSOCKET_RELAY_LOGIN=${WEBSOCKET_RELAY_LOGIN}
+      - WEBSOCKET_RELAY_PASSCODE=${WEBSOCKET_RELAY_PASSCODE}
+      - WEBSOCKET_RELAY_VHOST=${WEBSOCKET_RELAY_VHOST}
     networks:
       - do-an-net
     depends_on:
@@ -177,6 +217,9 @@ services:
       - "8083:8083"
     environment:
       - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+      - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
+      - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
       - EUREKA_SERVER_URL=${EUREKA_SERVER_URL}
       - EUREKA_INSTANCE_HOSTNAME=${EUREKA_INSTANCE_HOSTNAME_LEARNING_PATH_SERVICE}
       - SPRING_ZIPKIN_BASE_URL=${SPRING_ZIPKIN_BASE_URL}
@@ -202,10 +245,28 @@ services:
       - "8084:8084"
     environment:
       - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+      - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
+      - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
       - EUREKA_SERVER_URL=${EUREKA_SERVER_URL}
       - EUREKA_INSTANCE_HOSTNAME=${EUREKA_INSTANCE_HOSTNAME_PAYMENT_SERVICE}
       - SPRING_ZIPKIN_BASE_URL=${SPRING_ZIPKIN_BASE_URL}
       - HOST_IP_ADDRESS=${HOST_IP_ADDRESS}
+      - PAYPAL_MODE=${PAYPAL_MODE}
+      - PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
+      - PAYPAL_CLIENT_SECRET=${PAYPAL_CLIENT_SECRET}
+      - PAYPAL_API_BASE=${PAYPAL_API_BASE}
+      - PAYPAL_RETURN_URL=${PAYPAL_RETURN_URL}
+      - PAYPAL_CANCEL_URL=${PAYPAL_CANCEL_URL}
+      - VNPAY_TMN_CODE=${VNPAY_TMN_CODE}
+      - VNPAY_HASH_SECRET=${VNPAY_HASH_SECRET}
+      - VNPAY_PAYMENT_URL=${VNPAY_PAYMENT_URL}
+      - VNPAY_RETURN_URL=${VNPAY_RETURN_URL}
+      - VNPAY_VERSION=${VNPAY_VERSION}
+      - VNPAY_COMMAND=${VNPAY_COMMAND}
+      - VNPAY_ORDER_TYPE=${VNPAY_ORDER_TYPE}
+      - PAYMENT_FRONTEND_RESULT_URL=${PAYMENT_FRONTEND_RESULT_URL}
+      - PAYMENT_FRONTEND_VNPAY_RETURN_URL=${PAYMENT_FRONTEND_VNPAY_RETURN_URL}
     networks:
       - do-an-net
     depends_on:
@@ -262,13 +323,12 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - KAFKA_EMAIL_TOPIC=${KAFKA_EMAIL_TOPIC}
       - KAFKA_NOTIFICATION_TOPIC=${KAFKA_NOTIFICATION_TOPIC}
-      - KAFKA_CONSUMER_GROUP=notification-service-v3
       - KAFKA_AUTO_OFFSET_RESET=${KAFKA_AUTO_OFFSET_RESET}
       - KAFKA_CONSUMER_TRUSTED_PACKAGES=${KAFKA_CONSUMER_TRUSTED_PACKAGES}
       - KAFKA_CONSUMER_CONCURRENCY=${KAFKA_CONSUMER_CONCURRENCY}
       - KAFKA_CONSUMER_ACK_MODE=${KAFKA_CONSUMER_ACK_MODE}
-      - MAIL_USERNAME=${NOTIFICATION_MAIL_USERNAME}
-      - MAIL_PASSWORD=${NOTIFICATION_MAIL_PASSWORD}
+      - NOTIFICATION_MAIL_USERNAME=${NOTIFICATION_MAIL_USERNAME}
+      - NOTIFICATION_MAIL_PASSWORD=${NOTIFICATION_MAIL_PASSWORD}
       - SPRING_ZIPKIN_BASE_URL=${SPRING_ZIPKIN_BASE_URL}
       - HOST_IP_ADDRESS=${HOST_IP_ADDRESS}
     networks:
@@ -279,6 +339,47 @@ services:
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8088/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  ai-service-container:
+    image: toandeptroai/ai-service:0.1.0
+    container_name: ai-service-container
+    ports:
+      - "8091:8091"
+    environment:
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+      - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
+      - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
+      - EUREKA_SERVER_URL=${EUREKA_SERVER_URL}
+      - EUREKA_INSTANCE_HOSTNAME=${EUREKA_INSTANCE_HOSTNAME_AI_SERVICE}
+      - SPRING_ZIPKIN_BASE_URL=${SPRING_ZIPKIN_BASE_URL}
+      - HOST_IP_ADDRESS=${HOST_IP_ADDRESS}
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - KAFKA_COURSE_EVENTS_TOPIC=${KAFKA_COURSE_EVENTS_TOPIC}
+      - OPENAI_BASE_URL=${OPENAI_BASE_URL}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_CHAT_MODEL=${OPENAI_CHAT_MODEL}
+      - OPENAI_CHAT_MAX_OUTPUT_TOKENS=${OPENAI_CHAT_MAX_OUTPUT_TOKENS}
+      - CHATBOT_EMBEDDING_MODEL=${CHATBOT_EMBEDDING_MODEL}
+      - CHATBOT_EMBEDDING_MAX_SOURCES=${CHATBOT_EMBEDDING_MAX_SOURCES}
+      - CHATBOT_MOCK_EMBEDDINGS=${CHATBOT_MOCK_EMBEDDINGS}
+      - QDRANT_HOST=${QDRANT_HOST}
+      - QDRANT_API_KEY=${QDRANT_API_KEY}
+      - QDRANT_RECOMMENDATION_COLLECTION=${QDRANT_RECOMMENDATION_COLLECTION}
+      - QDRANT_LESSON_COLLECTION=${QDRANT_LESSON_COLLECTION}
+      - QDRANT_PROFILE_COLLECTION=${QDRANT_PROFILE_COLLECTION}
+      - AI_CHAT_CLEANUP_DAYS=${AI_CHAT_CLEANUP_DAYS}
+    networks:
+      - do-an-net
+    depends_on:
+      service-discovery-container:
+        condition: service_healthy
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-fsS", "http://localhost:8091/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
