feat(Config) :  Config Hikari

--- a/ai-service/src/main/resources/application.yml
+++ b/ai-service/src/main/resources/application.yml
@@ -11,6 +11,15 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 20000
+      maximum-pool-size: 5
+      minimum-idle: 2
+      idle-timeout: 300000
+      max-lifetime: 1200000
+      auto-commit: true
+      pool-name: AiServiceHikariPool
+      leak-detection-threshold: 60000
   jpa:
     hibernate:
       ddl-auto: update
