--- a/portainer-stack.yml
+++ b/portainer-stack.yml
@@ -13,6 +13,20 @@ services:
       - HOST_IP_ADDRESS=${HOST_IP_ADDRESS}
     networks:
       - do-an-net
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8761/actuator/health"]
@@ -37,6 +51,20 @@ services:
     depends_on:
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8443/actuator/health"]
@@ -71,6 +99,20 @@ services:
         condition: service_healthy
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8085/actuator/health"]
@@ -114,6 +156,20 @@ services:
     depends_on:
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8080/actuator/health"]
@@ -160,6 +216,20 @@ services:
         condition: service_healthy
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8081/actuator/health"]
@@ -203,6 +273,20 @@ services:
         condition: service_healthy
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8082/actuator/health"]
@@ -231,6 +315,20 @@ services:
         condition: service_healthy
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8083/actuator/health"]
@@ -274,6 +372,20 @@ services:
         condition: service_healthy
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8084/actuator/health"]
@@ -301,6 +413,20 @@ services:
     depends_on:
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8086/actuator/health"]
@@ -336,6 +462,20 @@ services:
     depends_on:
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8088/actuator/health"]
@@ -377,6 +517,20 @@ services:
     depends_on:
       service-discovery-container:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: "0.30"
+          memory: 512M
+        reservations:
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 5
+      update_config:
+        parallelism: 1
+        delay: 10s
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8091/actuator/health"]
