--- a/portainer-stack.yml
+++ b/portainer-stack.yml
@@ -13,20 +13,9 @@ services:
       - HOST_IP_ADDRESS=${HOST_IP_ADDRESS}
     networks:
       - do-an-net
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8761/actuator/health"]
@@ -49,22 +38,10 @@ services:
     networks:
       - do-an-net
     depends_on:
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8443/actuator/health"]
@@ -95,24 +72,11 @@ services:
     networks:
       - do-an-net
     depends_on:
-      api-gateway-container:
-        condition: service_healthy
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - api-gateway-container
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8085/actuator/health"]
@@ -154,22 +118,10 @@ services:
     networks:
       - do-an-net
     depends_on:
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8080/actuator/health"]
@@ -212,24 +164,11 @@ services:
     networks:
       - do-an-net
     depends_on:
-      api-gateway-container:
-        condition: service_healthy
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - api-gateway-container
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8081/actuator/health"]
@@ -269,24 +208,11 @@ services:
     networks:
       - do-an-net
     depends_on:
-      api-gateway-container:
-        condition: service_healthy
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - api-gateway-container
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8082/actuator/health"]
@@ -311,24 +237,11 @@ services:
     networks:
       - do-an-net
     depends_on:
-      api-gateway-container:
-        condition: service_healthy
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - api-gateway-container
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8083/actuator/health"]
@@ -368,24 +281,11 @@ services:
     networks:
       - do-an-net
     depends_on:
-      api-gateway-container:
-        condition: service_healthy
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - api-gateway-container
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8084/actuator/health"]
@@ -411,22 +311,10 @@ services:
     networks:
       - do-an-net
     depends_on:
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8086/actuator/health"]
@@ -460,22 +348,10 @@ services:
     networks:
       - do-an-net
     depends_on:
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8088/actuator/health"]
@@ -515,22 +391,10 @@ services:
     networks:
       - do-an-net
     depends_on:
-      service-discovery-container:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          cpus: "0.30"
-          memory: 512M
-        reservations:
-          memory: 256M
-      restart_policy:
-        condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        parallelism: 1
-        delay: 10s
+      - service-discovery-container
+    cpus: "0.30"
+    mem_limit: 512m
+    mem_reservation: 256m
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8091/actuator/health"]
