--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,6 +70,12 @@ jobs:
           chmod +x mvnw
           ./mvnw -B -DskipTests clean install
 
+      - name: Build proxy-client (shared library)
+        working-directory: ./proxy-client
+        run: |
+          chmod +x mvnw
+          ./mvnw -B -DskipTests clean install
+
       - name: Build ${{ matrix.service.name }}
         working-directory: ${{ matrix.service.context }}
         run: |
